addons/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    name: prometheus
    phase: prod
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 9090
